--- a/joia.css
+++ b/joia.css
@@ -63,7 +63,10 @@ body {
 }
 
 .barraLateral{
-    width: 20%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
     background-color: #FF8500;
 }
 
@@ -78,6 +81,11 @@ body {
     color: transparent;
     border-color: transparent;
     background-color: transparent;
+}
+
+.header{
+    display: flex;
+    align-items: center;
 }
 
 .submit-button{
